<resources>
    <string name="app_name">PillHelper</string>
    <string name="Name">Name </string>
    <string name="Password">Password </string>
    <string name="Attempts">Number of attempts remaining: 5 </string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Account">Already have an account?</string>
    <string name="Email"> E-mail </string>
    <string name="Logout">Log Out </string>
    <string name="Dose"> New Medication</string>
    <string name="Medication"> Name your new medication here!</string>
    <string name="Increase"> + </string>
    <string name="Decrease"> - </string>
    <string name="Add">Add</string>
    <string name="Zero">0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="global_confirm">Confirm</string>
    <string name="global_warning">Warning</string>
    <string name="global_error">Error</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_ok">OK</string>
    <string name="global_yes">Yes</string>
    <string name="global_no">No</string>
    <string name="removedid">Removed id</string>
    <string name="failedtocreatefolder">Failed to create folder</string>
    <string name="optional">Optional</string>
    <string name="action_settings">Settings</string>
    <string name="DateLabel">Date</string>
    <string name="FunctionLabel">Display</string>
    <string name="HistoryLabel">History</string>
    <string name="GraphLabel">Graphs</string>
    <string name="AddLabel">Add</string>
    <string name="AddSmallLabel">Add</string>
    <string name="DeleteLabel">Delete</string>
    <string name="ShareLabel">Share</string>
    <string name="EditLabel">Edit</string>
    <string name="DeleteRecordDialog">Remove this record?</string>
    <string name="FonteLabel">Bodybuilding</string>
    <string name="RecordLabel">Records</string>
    <string name="SerieLabel">Sets</string>
    <string name="RepetitionLabel">Repetitions</string>
    <string name="RepetitionLabel_short">Reps</string>
    <string name="MachineLabel">Exercise</string>
    <string name="PoidsLabel">Weight</string>
    <string name="KgUnitLabel">Kg</string>
    <string name="LbsUnitLabel">Lbs</string>
    <string name="NotesLabel">Notes</string>
    <string name="TopTenLabel">Last records:</string>
    <string name="ShareText">Share</string>
    <string name="ShareTitle">Share your perf</string>
    <string name="ShareInstruction">Edit your text before sending:</string>
    <string name="ShareTextDefault">I have lifted __WEIGHT__ kg on __MACHINE__ !</string>
    <string name="ShareParamName">__NAME__</string>
    <string name="ShareParamWeight">__WEIGHT__</string>
    <string name="ShareParamMachine">__MACHINE__</string>
    <string name="ShareParamExercise">__EXERCISE__</string>
    <string name="CardioLabel">Cardio</string>
    <string name="CardioMenuLabel">Cardio (Obsolete)</string>
    <string name="DistanceLabel">Distance (Km)</string>
    <string name="KmUnitLabel">Km</string>
    <string name="MilesUnitLabel">Miles</string>
    <string name="DurationLabel">Duration</string>
    <string name="ExerciceLabel">Exercises</string>
    <string name="weightMenuLabel">Weight Track</string>
    <string name="weightLabel">Weight(kg)</string>
    <string name="fatLabel">Fat(%)</string>
    <string name="bonesLabel">Bones(%)</string>
    <string name="waterLabel">Water(%)</string>
    <string name="musclesLabel">Muscles(%)</string>
    <string name="sizeLabel">Size</string>
    <string name="measureLabel">Measure</string>
    <string name="weightTableLabel">Weight records:</string>
    <string name="sizeTableLabel">Measures history:</string>
    <string name="createProfilTitle">Create new profile</string>
    <string name="profileSelected">Profile selected</string>
    <string name="profileDeleteImpossible">Impossible to delete current profile</string>
    <string name="createProfilQuestion">Choose your profile name?</string>
    <string name="userChanged">User changed</string>
    <string name="renameProfilTitle">Rename profile</string>
    <string name="renameProfilQuestion">Rename this profile?</string>
    <string name="DeleteWeightDialog">Remove this weight?</string>
    <string name="SettingLabel">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="export_database">Export Records</string>
    <string name="export_question">Do you want to export the database of </string>
    <string name="export_success">Database exported</string>
    <string name="export_failed">Database export failed</string>
    <string name="import_database">Import Records</string>
    <string name="deleteDB_warning">
        This action will reset the entire application.
        All data will be lost.
        Are you sure?
        This will exit the application.
    </string>
    <string name="ResetAppLabel">Reset application</string>
    <string name="MachinesLabel">Exercises</string>
    <string name="DescriptionLabel">Description</string>
    <string name="pref_ui_setting">UI Settings</string>
    <string name="pref_show_mp3_player">Show MP3 Player</string>
    <string name="pref_show_mp3_player_summary">Show/hide the MP3 player toolbar</string>
    <string name="pref_bodybuilding_setting">Bodybuilding Settings</string>
    <string name="pref_preferredUnitSummary">Preferred unit:</string>
    <string name="pref_preferredUnitTitle">Select your preferred weight unit</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User profile</string>
    <string name="profil_create_new">Create new profile</string>
    <string name="profil_change">Change profile</string>
    <string name="profil_select_profil">Select a profile</string>
    <string name="profil_edit">Edit profile</string>
    <string name="profil_delete">Delete a profile</string>
    <string name="profil_select_profil_to_delete">Select a profile to delete</string>
    <string name="AboutLabel">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="fonte_units">
        <item>@string/KgUnitLabel</item>
        <item>@string/LbsUnitLabel</item>
    </string-array>
    <string-array name="fonte_unitsValues">
        <item>test0</item>
        <item>test1</item>
    </string-array>
    <string-array name="fonte_unitsEnum">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="morphology">
        <item>Thin</item>
        <item>Straight</item>
        <item>Bold</item>
    </string-array>
    <string name="maxRep1">Maximum (Reps >= 1)</string>
    <string name="maxRep5d">Maximum (Reps >= 5)</string>
    <string name="sum">Sum</string>
    <string-array name="graph_functions">
        <item>@string/maxRep1</item>
        <item>@string/maxRep5d</item>
        <item>@string/sum</item>
    </string-array>
    <string name="sumDistance">Distance</string>
    <string name="sumDuration">Duration</string>
    <string name="speed">Speed</string>
    <string-array name="graph_cardio_functions">
        <item>@string/sumDistance</item>
        <item>@string/sumDuration</item>
        <item>@string/speed</item>
    </string-array>
    <string name="all">All</string>
    <string name="bodytracking">Body Track</string>
    <string name="selectMuscles">Select Muscles</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="pectoraux">Chest</string>
    <string name="deltoids">Deltoids</string>
    <string name="dorseaux">Back</string>
    <string name="abdominaux">Abdominals</string>
    <string name="quadriceps">Quadriceps</string>
    <string name="ischio_jambiers">Hamstrings</string>
    <string name="adducteurs">Thighs</string>
    <string name="mollets">Calves</string>
    <string name="left_arm">Left biceps</string>
    <string name="right_arm">Right biceps</string>
    <string name="neck">Neck</string>
    <string name="left_thigh">Left thigh</string>
    <string name="right_thigh">Right thigh</string>
    <string name="left_calves">Left calves</string>
    <string name="right_calves">Right calves</string>
    <string name="waist">Waist</string>
    <string name="behind">Hips</string>
    <string name="MesureHint">Enter size here</string>
    <string name="backDialog_confirm_text">Do you want to save before exiting?</string>
    <string name="deleteMachine_confirm_text">Do you want to delete this exercise? All associated records will be deleted.</string>
    <string name="deleteRecordsWithMachine_confirm_text">Do you want to delete all records associated with this machine? All associated records will be deleted.</string>
    <string name="renameMachine_warning_text">WARNING: This exercise name already exists. Records will be merged with the other exercise.</string>
    <string name="renameMachine_error_text">This name already exists, please select another name.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="graph_all">All</string>
    <string name="graph_lastyear">Last Year</string>
    <string name="graph_lastmonth">Last Month</string>
    <string name="graph_lastweek">Last Week</string>
    <string name="StartingTime">Start</string>
    <string name="PausedTime">Pause</string>
    <string name="ResetTime"> Reset</string>
    <string name="ChronometerLabel">Chronometer</string>
    <string name="CountdownLabel">Rest time</string>
    <string name="activate_rest_time">Activate rest countdown</string>
    <string name="rest_time">Rest time (sec)</string>
    <string name="lastRecordLabel">Last record</string>
    <string name="DrugHint">Filter by drug name</string>
    <string name="WeightHint">Enter your weight here</string>
    <string name="total_weight">Total weight</string>
    <string name="total_session">Total during session</string>
    <string name="total_machine">Total on exercise</string>
    <string name="nb_serie">Nb Serie</string>
    <string name="exit">Exit</string>
    <string name="selectMachineDialogLabel">Select an existing exercise</string>
    <string name="fillAllFields">Please fill all the fields</string>
    <string name="fillNameField">Please enter your name, at least</string>
    <string name="introSlide1Title">Hello</string>
    <string name="size_cm">Size in cm</string>
    <string name="size_cm_optional">Size in cm (optional)</string>
    <string name="create">Create</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_optional">Birthday (optional)</string>
    <string name="name_or_pseudo">Name / pseudonym</string>
    <string name="name_is_required">Name is required</string>
    <string name="create_a_profile">Create a profile</string>
    <string name="introSlide1Text">Welcome to Fast N Fitness! This application is a quick and simple way to record your workout and follow your progression and the evolution of your body.</string>
    <string name="introSlide2Text">Write the name of the exercise and the details, and it will created automatically. You can find it back easily in the list.</string>
    <string name="introSlide2Title">Quick and easy</string>
    <string name="introSlide3Text">To take pictures of your machines, the app needs authorization to access your camera and phone storage.</string>
    <string name="introSlide3Title">Required permissions</string>
    <string name="titleSlideEssential">Go to the essential</string>
    <string name="todo">TODO</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
</resources>