<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RecyclerListDrugs">

    <EditText
        android:id="@+id/edittext_drugs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/Medication"
        android:inputType="text" />

    <TextView
        android:id="@+id/textview_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_drugs"
        android:layout_centerHorizontal="true"
        android:text="@string/Dose"
        android:layout_margin="8dp"
        android:textSize="50sp" />

    <Button
        android:id="@+id/button_decrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="517dp"
        android:text="@string/Decrease" />

    <Button
        android:id="@+id/button_increase"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="517dp"
        android:layout_toEndOf="@+id/button_decrease"
        android:text="@string/Increase" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_drugs"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="517dp"
        android:text="@string/Add" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>